# TrainingTadks

./: .gitignore
FileManager/FileManager1/: FileCounter.cpp  FileCounter.h  FileLinesCounterModel.cpp  FileLinesCounterModel.h  FileManager1.pro  Widget.cpp  Widget.h
ForTesting/: CMakeLists.txt  main.cpp  main.h
QtTask2.1/build-Task2_2-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: moc_mainwindow.cpp
SignalConstellation/SignalConstellation1/: AddArrowDialog.cpp  AddArrowDialog.h  AddArrowDialog.ui  AddArrowsByValue.cpp  AddArrowsByValue.h  AddArrowsByValue.ui  Arrow.cpp  Arrow.h  ArrowItem.cpp  ArrowItem.h  ConstellationWidget.cpp  ConstellationWidget.h  ConstellationWidget.ui  CoordinateAxes.cpp  CoordinateAxes.h  EditValueDialog.cpp  EditValueDialog.h  EditValueDialog.ui  Helper.cpp  Helper.h  Helper.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PointEditor.cpp  PointEditor.h  PointEditor.ui  PointItem.cpp  PointItem.h  PointModel.cpp  PointModel.h  PointView.cpp  PointView.h  ResultCode.h  SignalConstellation1.pro  Theme.h  UserTest.cpp  UserTest.h  UserTest.ui  main.cpp  (+3 more)
Snake/Snake2/: Snake2_test.pro  SnakeGameModel.h  SnakeWidget.cpp  main.cpp
Snake/Snake2_test/: SnakeController.cpp  (+3 more)
Task1/: CMakeLists.txt  MakeOutPut.cpp  main.cpp
Task2/: CMakeLists.txt  GenerateTree.cpp  GenerateTree.h  MakeOutPut.cpp  MakeOutPut.h  Out.txt  main.cpp
Task2/Snake/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  GenerateTree.cpp  MakeOutPut.cpp  MakeOutPut.h  main.cpp
Task4/: CMakeLists.txt  GenerateTree.cpp  GenerateTree.h  MakeOutPut.cpp  MakeOutPut.h
(+499 files in other folders)
